<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/fbutton_color_clouds">



    <LinearLayout
        android:id="@+id/ShowActivity_LinerLayout_ShowStart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@color/fbutton_color_clouds"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ShowActivity_LinearLayout_ViewOfConnectButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fbutton_color_clouds"
            android:gravity="center"
            android:orientation="horizontal" >

        <com.dd.CircularProgressButton
            android:id="@+id/ShowActivity_Button_ConnectStart"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cpb_textComplete="@string/show_complete"
            app:cpb_textError="@string/show_error"
            app:cpb_textIdle="@string/show_connect"
            app:cpb_cornerRadius="16dp"
            />

          </LinearLayout>

        <RelativeLayout
            android:id="@+id/ShowActivity_RelativeLayout_ViewOfButtonSet"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@color/fbutton_color_clouds"

            android:orientation="horizontal" >

            <info.hoang8f.widget.FButton
            android:id="@+id/ShowActivity_Button_ShowHRChart"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"

            android:textColor="#ffffffff"
            android:textSize="24sp"
            android:text="@string/show_showHRChart"
            fbutton:buttonColor="@color/khaki"
            fbutton:shadowColor="@color/khaki"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="15dp"
            fbutton:cornerRadius="5dp"/>

            <info.hoang8f.widget.FButton
                android:id="@+id/ShowActivity_Button_ShowTimeChart"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_below="@+id/ShowActivity_Button_ShowHRChart"
                android:layout_marginTop="10dp"
                android:textColor="#ffffffff"
                android:textSize="24sp"
                android:text="@string/show_showTimeChart"
                fbutton:buttonColor="@color/khaki"
                fbutton:shadowColor="@color/khaki"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="15dp"
                fbutton:cornerRadius="5dp"/>

            <info.hoang8f.widget.FButton
                android:id="@+id/ShowActivity_Button_ShowFreqChart"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/ShowActivity_Button_ShowTimeChart"
                android:textColor="#ffffffff"
                android:textSize="24sp"
                android:text="@string/show_showFreqChart"
                fbutton:buttonColor="@color/khaki"
                fbutton:shadowColor="@color/khaki"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="15dp"
                fbutton:cornerRadius="5dp"/>



        </RelativeLayout>
    </LinearLayout>




    <LinearLayout
        android:id="@+id/ShowActivity_LinerLayout_ECGChart"
        android:orientation="vertical"
        android:background="@color/fbutton_color_clouds"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_weight="2"
        android:layout_height="0dp"
        android:layout_width="match_parent">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ShowActivity_LinerLayout_HRChart"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:background="@color/fbutton_color_clouds"
        android:layout_weight="2"
        android:visibility="visible"
        >
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/HRChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ShowActivity_RelativeLayout_TimeChart"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:background="@color/fbutton_color_clouds"
        android:orientation="horizontal"
        android:visibility="gone"
    >

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/TimeChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ShowActivity_RelativeLayout_FreqChart"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:background="@color/fbutton_color_clouds"
        android:orientation="horizontal"
        android:visibility="gone"
        >

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/FreqChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>


    <TextView
        android:id="@+id/ShowActivity_TextView_AnalysisText"
        android:layout_height="0dip"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/fbutton_color_clouds"/>

</LinearLayout>